<resources>
    <string name="app_name">News Today</string>
    <string name="spacex">SpaceX Starlink Launch Schedule: Details about Falcon 9 rocket, live stream and more - Republic World</string>
    <string name="source">Source: &#160;</string>
    <string name="saurabh_pant">Saurabh Pant</string>
    <string name="_2021_01_18">2021–01–18</string>
    <string name="date">Published: &#160;</string>
    <string name="menu_bar">Menu Bar</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sources">Sources</string>
    <string name="chat">Chat</string>
    <string name="amit15116_gmail_com">amit15116@gmail.com</string>
    <string name="developed_by_amit_kumar">Developed by: Amit Kumar</string>
    <string name="amit_kumar">Amit Kumar</string>
    <string name="sort_by">Sort By</string>
    <string name="profile">Profile</string>
    <string name="top_channels">Top channels</string>
    <string name="show_all">Show All</string>
    <string name="hot_news">Hot News</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_feed">My Feed</string>

</resources>