<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/spacex"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:shadowColor="?attr/colorPrimaryVariant"
        android:shadowDx="-5"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/footer_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saurabh_pant"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/footer_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/footer_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/_2021_01_18"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/footer_size" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>